# bridle

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  dist-workspace.toml  harness-locate-bug-report.md  harness-locate-bugs.md  outline2.md
.beads/: issues.jsonl
.github/: CODEOWNERS  pull_request_template.md  release-please-config.json  release-please-manifest.json
.github/workflows/: ci.yml  discord-release.yml  release.yml
crates/bridle/: CHANGELOG.md  Cargo.toml
crates/bridle/src/cli/: commands.rs  config_cmd.rs  init.rs  install.rs  mod.rs  status.rs  uninstall.rs
crates/bridle/src/config/: bridle.rs  mod.rs
crates/bridle/src/config/manager/: files.rs  lifecycle.rs  mod.rs
crates/bridle/src/harness/: mod.rs
crates/bridle/src/install/: installer.rs  manifest.rs  mcp_installer.rs  mod.rs  uninstaller.rs
crates/harness-locate/: CHANGELOG.md  Cargo.toml
crates/skills-locate/: CHANGELOG.md  Cargo.toml
src/: error.rs  main.rs
src/cli/: commands.rs  init.rs  install.rs  mod.rs  output.rs  profile.rs  uninstall.rs
src/config/: bridle.rs  manager.rs  mod.rs
src/config/manager/: mod.rs
src/config/manager/extraction/: mod.rs
src/harness/: install_instructions.rs  mod.rs
src/install/: discovery.rs  installer.rs  mcp_config.rs  mcp_installer.rs  mod.rs  types.rs  uninstaller.rs
src/tui/: mod.rs  theme.rs
src/tui/views/: mod.rs
src/tui/widgets/: detail_pane.rs  harness_tabs.rs  mod.rs  profile_table.rs  status_bar.rs
tests/: cli_integration.rs  mcp_installation.rs
